syntax = "proto3";

package io.stellarproject.controller.v1;

import weak "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "github.com/stellarproject/terraos/api/node/v1/agent.proto";

option go_package = "github.com/stellarproject/terraos/api/controller/v1;v1";

service Controller {
	// List all nodes registered with the controller
	rpc List(google.protobuf.Empty) returns (ListNodeResponse);
	// Delete a node
	rpc Delete(DeleteNodeRequest) returns (google.protobuf.Empty);
	// Register a node(machine) with the cluster, this does not provision
	// the node's disk or OS
	rpc Register(RegisterNodeRequest) returns (RegisterNodeResponse);
}

message RegisterNodeRequest {
	node.v1.Node node = 1;
}

message RegisterNodeResponse {
	node.v1.Node node = 1;
}

message ListNodeResponse {
	repeated node.v1.Node nodes = 1;
}

message DeleteNodeRequest {
	string hostname = 1;
}
